packages/compiler/tests/fixtures/valid/fetch-with-post.svelte
<script>
  let data = fetch("/api", { method: "POST" })
</script>
<text>Loading</text>
