packages/compiler/tests/fixtures/invalid/timer-usage.svelte
<script>
  setTimeout(() => {}, 1000)
</script>
<text>Tick</text>
